Updating the script to upgrade to Async Profiler 4.1 (#331)
* Updating the script to upgrade to Async Profiler 4.1
* Updating support for Async Profiler 4.1
* Improving scripts
* New tests with java 25